--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 ---
 language: ruby
 cache: bundler
+
+script: bundle exec rake spec
+
 rvm:
-  - 2.7.0
-before_install: gem install bundler -v 2.1.2
+  - 2.7
+  - jruby-9.2.11.1
